# tagger

./: Cargo.toml  LICENSE  Makefile  README.org  roadmap.org
doc/man/: tgr-refile.1  tgr-search.1
doc/shell_comp/: _tgr  tgr.elv  tgr.fish  tgr.nu  tgr.ts
etc/man/: tgr-count.1  tgr-locate.1  tgr-refile.1  tgr-search.1  tgr-sed.1  tgr-tags.1  tgr.1
etc/shell_comp/: _tgr  _tgr.ps1  tgr.bash  tgr.elv  tgr.fish  tgr.nu  tgr.ts  tgr.yaml
src/: cli.rs  commands.rs  config.rs  count.rs  io.rs  lib.rs  locate.rs  main.rs  orgtree.rs  refile.rs  search.rs
tests/: test_get_tags.rs  test_io.rs  test_search_tags.rs
tests/org_files/: another_file_with_tags.org  org_file1.org  org_file2.org  org_file3.org  org_file_with_no_tags.org
