[package]
name = "tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
bat = "0.25.0"
clap = { version = "4.5.32", features = ["derive"] }
clap_allgen = "0.2.1"
grep = "0.3.2"
minus = { version = "5.6.1", features = ["regex", "search", "static_output"] }
serde = "1.0.219"
serde_derive = "1.0.219"
string-builder = "0.2.0"
toml = "0.8.20"

[dev-dependencies]
pretty_assertions = "1.4.1"
relative-path = "1.9.3"

[[bin]]
name = "tgr"
path = "src/main.rs"
