[package]
name = "tagger"
version = "0.2.0"
edition = "2024"

[dependencies]
bat = { version = "0.25.0", default-features = false, features = ["regex-fancy"] }
clap = { version = "4.5.48", features = ["derive"] }
clap_allgen = "0.2.1"
grep = "0.4.0"
minus = { version = "5.6.1", features = ["regex", "search", "static_output"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_derive = "1.0.228"
string-builder = "0.2.0"
toml = "0.9.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
relative-path = "2.0.1"

[[bin]]
name = "tgr"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
