[package]
name = "tagger"
version = "0.2.6"
edition = "2024"

[dependencies]
bat = { version = "0.26.1", default-features = false, features = ["regex-fancy"] }
clap = { version = "4.6.2", features = ["derive"] }
clap_allgen = "0.2.1"
grep = "0.4.1"
minus = { version = "5.7.2", features = ["regex", "search", "static_output"] }
rayon = "1.12.0"
serde = "1.0.229"
serde_derive = "1.0.229"
string-builder = "0.2.0"
toml = "1.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
relative-path = "2.0.1"

[[bin]]
name = "tgr"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
